manifests/argocd/apps/notes/base/apps/notes-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notes
  namespace: notes
  annotations:
    argocd.argoproj.io/sync-wave: "111"
    hajimari.io/enable: "true"
    hajimari.io/appName: "Notes"
    hajimari.io/group: "Productivity"
    hajimari.io/icon: "notebook-heart"
spec:
  ingressClassName: nginx
  rules:
    - host: notes.apps.titan.janz.digital
      http:
        paths:
          - backend:
              service:
                name: notes-nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
    - host: notes.janz.digital
      http:
        paths:
          - backend:
              service:
                name: notes-nginx
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - notes.apps.titan.janz.digital
